# Ferrisshare

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: architecture.md
src/: lib.rs  main.rs
src/application/: config.rs  ferrisshare_state.rs  mod.rs
src/cli/: main.rs
src/core/domain/: mod.rs
src/core/domain/command/: entities.rs  ports.rs  services.rs
src/core/domain/network/: entities.rs  ports.rs  services.rs
src/core/domain/storage/: entities.rs  ports.rs
src/infra/repositories/fs/: fs_storage_repository.rs  mod.rs
src/lib/domain/storage/: entities.rs
